syntax = "proto3";

package bubbaloop.header.v1;

message Header {
    uint64 acq_time = 1;    // Acquisition timestamp (nanoseconds since epoch)
    uint64 pub_time = 2;    // Publication timestamp (nanoseconds since epoch)
    uint32 sequence = 3;    // Message sequence number
    string frame_id = 4;    // Source identifier
    string machine_id = 5;  // Machine hostname
    string scope = 6;       // Deployment scope (from BUBBALOOP_SCOPE env var)
}
